Table column selector now has both on and off styles, and checkmark for visible columns. Fixes #1469
svn changeset:4019/svn branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/table/table.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/table/table.css
@@ -160,9 +160,15 @@
 }
 
 
-/* disabled row in column selector */
-.i-off {
-	font-style: italic;
+/* rowe in column selector */
+.i-on div {
+	background-image: url('img/check.gif');
+	background-repeat: no-repeat;
+	background-position: 2px center;
+	text-indent: 6px;
+}
+.i-off div {
+	text-indent: 6px;
 	color:
 }
 
